# atendemente-local

./: .gitignore  README.md  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  patients-import-sample-20.xls  patients-import-sample-20.xlsx  patients-import-sample.csv  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: security-review.md
e2e/: run-e2e.mjs  run-e2e.ps1
e2e/fixtures/: auth.ts  test-data.ts
e2e/specs/: appointments.spec.ts  auth.spec.ts  onboarding.spec.ts  patients.spec.ts  payments.spec.ts  settings.spec.ts
scripts/: invite-user.ts  seed-demo.ts
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  audit_tests.rs  config.rs  crypto.rs  lib.rs  main.rs  middleware.rs  rate_limit.rs
src-tauri/src/api/: routes.rs
src-tauri/src/auth/: auth_service.rs  mod.rs  tests.rs
src-tauri/src/db/: models.rs
src-tauri/src/db/auth_migrations/: 20240101000002_onboarding_flag.sql  20240101000003_set_existing_onboarding_completed.sql
src-tauri/src/db/migrations/: 20240101000008_encrypt_pii.sql  20240101000009_search_tokens.sql  20240101000011_lgpd_audit_logs.sql  20240101000012_backup_config.sql
src-tauri/src/features/: backup.rs  dashboard.rs  files.rs  mod.rs  patients.rs
src/app/: globals.css  layout.tsx
src/components/: FileList.tsx  FileUploadButton.tsx  ImportPatientsModal.tsx  Layout.tsx  LockScreen.tsx
src/db/: client.ts  relations.ts
supabase/: config.toml
tests/: api-base.test.ts  appointments.test.ts  auth.test.ts  form.test.tsx
(+127 files in other folders)
