[package]
name = "atendemente"
version = "1.0.12"
description = "AtendeMente - Gestão para psicólogos autônomos"
authors = ["Clebson Torres"]
edition = "2021"
default-run = "atendemente"

[lib]
name = "atendemente_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
zip = "2"
csv = "1"
hkdf = "0.12"
sha2 = "0.10"
toml = "0.8"
validator = { version = "0.19", features = ["derive"] }
argon2 = "0.5"
infer = "0.16"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["windows-native"] }
dotenvy = "0.15"
mime_guess = "2"
local-ip-address = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
